FIxed Slider on desktop, fixed overflow of Overlays on desktop.

--- a/src/app/component/Overlay/Overlay.style.scss
+++ b/src/app/component/Overlay/Overlay.style.scss
@@ -29,11 +29,18 @@
     @include after-mobile {
         position: absolute;
         transition: opacity 200ms;
+        height: 0;
+        overflow: hidden;
     }
 
     &_isVisible {
         pointer-events: all;
         touch-action: pan-y;
         opacity: 1;
+
+        @include after-mobile {
+            height: auto;
+            overflow: visible;
+        }
     }
 }
